--- a/WebAirport/Views/Airplane/Edit.cshtml
+++ b/WebAirport/Views/Airplane/Edit.cshtml
@@ -10,77 +10,76 @@
 </div>
 
 <h2>Данные выбранного самолета</h2>
-@Html.ValidationSummary(true)
 
-<div>
-    <form method="post">
-        <table>
-            <tr>
-                <td>@Html.HiddenFor(model => model.Id)</td>
-            </tr>
-            <tr>
-                <td>Модель самолета</td>
-                <td>
-                    @Html.EditorFor(model => model.Model)
-                    @Html.ValidationMessageFor(model => model.Model)
-                </td>
-            </tr>
-            <tr>
-                <td>Вместимость пассажирова</td>
-                <td>
-                    @Html.EditorFor(model => model.PessengerCapacity)
-                    @Html.ValidationMessageFor(model => model.PessengerCapacity)
-                </td>
-            </tr>
-            <tr>
-                <td>Грузовая вместимость</td>
-                <td>
-                    @Html.EditorFor(model => model.CarryingCapacity)
-                    @Html.ValidationMessageFor(model => model.CarryingCapacity)
-                </td>
-            </tr>
-            <tr>
-                <td>Спецификация</td>
-                <td>
-                    @Html.EditorFor(model => model.Specifications)
-                    @Html.ValidationMessageFor(model => model.Specifications)
-                </td>
-            </tr>
-            <tr>
-                <td>Часов налета</td>
-                <td>
-                    @Html.EditorFor(model => model.FlyingHours)
-                    @Html.ValidationMessageFor(model => model.FlyingHours)
-                </td>
-            </tr>
-            <tr>
-                <td>Дата создания</td>
-                <td>
-                    <input type="date" name="ReleaseDate" required value="@String.Format("{0:yyyy-MM-dd}", Model.ReleaseDate)" />
-                    @Html.ValidationMessageFor(model => model.ReleaseDate)
-                </td>
-            </tr>
-            <tr>
-                <td>Дата последнего ремонта</td>
-                <td>
-                    <input type="date" name="LastRepairDate" required value="@String.Format("{0:yyyy-MM-dd}", Model.LastRepairDate)" />
-                    @Html.ValidationMessageFor(model => model.LastRepairDate)
-                </td>
-            </tr>
-            <tr>
-                <td>Типы самолетов</td>
-                <td>
-                    @if (ViewBag.TypeAirplanes != null)
-                    {
-                        @Html.DropDownListFor(model => model.TypeAirplaneId, ViewBag.TypeAirplanes as SelectList)
-                        @Html.ValidationMessageFor(model => model.TypeAirplaneId)
-                    }
-                </td>
-            </tr>
-        </table>
-
-        <input type="submit" value="Сохранить изменения" />
-    </form>
+<div class="row">
+    @Html.ValidationSummary(true)
+    <div class="col-md-6">
+        <form method="post">
+            @Html.HiddenFor(model => model.Id)
+            <table class="table">
+                <tr>
+                    <th>Модель самолета</th>
+                    <td>
+                        @Html.EditorFor(model => model.Model)
+                        @Html.ValidationMessageFor(model => model.Model)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Вместимость пассажирова</th>
+                    <td>
+                        @Html.EditorFor(model => model.PessengerCapacity)
+                        @Html.ValidationMessageFor(model => model.PessengerCapacity)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Грузовая вместимость</th>
+                    <td>
+                        @Html.EditorFor(model => model.CarryingCapacity)
+                        @Html.ValidationMessageFor(model => model.CarryingCapacity)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Спецификация</th>
+                    <td>
+                        @Html.EditorFor(model => model.Specifications)
+                        @Html.ValidationMessageFor(model => model.Specifications)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Часов налета</th>
+                    <td>
+                        @Html.EditorFor(model => model.FlyingHours)
+                        @Html.ValidationMessageFor(model => model.FlyingHours)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Дата создания</th>
+                    <td>
+                        <input type="date" name="ReleaseDate" required value="@String.Format("{0:yyyy-MM-dd}", Model.ReleaseDate)" />
+                        @Html.ValidationMessageFor(model => model.ReleaseDate)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Дата последнего ремонта</th>
+                    <td>
+                        <input type="date" name="LastRepairDate" required value="@String.Format("{0:yyyy-MM-dd}", Model.LastRepairDate)" />
+                        @Html.ValidationMessageFor(model => model.LastRepairDate)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Типы самолетов</th>
+                    <td>
+                        @if (ViewBag.TypeAirplanes != null)
+                        {
+                            @Html.DropDownListFor(model => model.TypeAirplaneId, ViewBag.TypeAirplanes as SelectList)
+                            @Html.ValidationMessageFor(model => model.TypeAirplaneId)
+                        }
+                    </td>
+                </tr>
+            </table>
+            <input type="submit" value="Сохранить изменения" onclick="return confirm('Сохранить изменения?')" />
+        </form>
+    </div>
 </div>
 
 @section Scripts {
