--- a/WebAirport/Views/TypeAirplane/Edit.cshtml
+++ b/WebAirport/Views/TypeAirplane/Edit.cshtml
@@ -9,42 +9,38 @@
 </div>
 
 <h2>Редактирование типа самолета</h2>
-
-@Html.ValidationSummary(true)
-<div>
-    <form method="post">
-        <table>
-            @Html.HiddenFor(model => model.Id)
-            <tr>
-                <td>Название типа</td>
-                <td>
-                    @Html.EditorFor(model => model.NameType)
-                    @Html.ValidationMessageFor(model => model.NameType)
-                </td>
-            </tr>
-            <tr>
-                <td>Назначение</td>
-                <td>
-                    @Html.EditorFor(model => model.Appointment)
-                    @Html.ValidationMessageFor(model => model.Appointment)
-                </td>
-            </tr>
-            <tr>
-                <td>Ограничения</td>
-                <td>
-                    @Html.EditorFor(model => model.Limitation)
-                    @Html.ValidationMessageFor(model => model.Limitation)
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <input type="submit" value="Сохранить изменения" />
-                </td>
-            </tr>
-        </table>
-    </form>
+<div class="row">
+    @Html.ValidationSummary(true)
+    <div class="col-md-6">
+        <form method="post">
+            <table class="table">
+                @Html.HiddenFor(model => model.Id)
+                <tr>
+                    <th>Название типа</th>
+                    <td>
+                        @Html.EditorFor(model => model.NameType)
+                        @Html.ValidationMessageFor(model => model.NameType)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Назначение</th>
+                    <td>
+                        @Html.EditorFor(model => model.Appointment)
+                        @Html.ValidationMessageFor(model => model.Appointment)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Ограничения</th>
+                    <td>
+                        @Html.EditorFor(model => model.Limitation)
+                        @Html.ValidationMessageFor(model => model.Limitation)
+                    </td>
+                </tr>
+            </table>
+            <input type="submit" value="Сохранить изменения" onclick="return confirm('Сохранить изменения?')"/> 
+        </form>
+    </div>
 </div>
-
 @section Scripts{
     @Scripts.Render("~/bundles/jqueryval")
 }
