--- a/WebAirport/Views/Airplane/Delete.cshtml
+++ b/WebAirport/Views/Airplane/Delete.cshtml
@@ -10,34 +10,36 @@
 
 <h2>Список связанных рейсов с выбранным самолетом</h2>
 
-<div>
-    <form method="post">
-        <p>
-            Выбранный самолет для удаления: @ViewBag.currentAirplane.Model
-            <input type="text" hidden name="currentId" value="@ViewBag.currentAirplane.Id" />
-        </p>
-        <table>
-            <tr>
-                <td>Дата и время полета</td>
-                <td>Пункт вылета</td>
-                <td>Пункт назначения</td>
-                <td>Время полета</td>
-                <td>Замена самолета</td>
-            </tr>
-            @foreach (var flight in Model)
-            {
+<div class="row">
+    <div class="col-md-6">
+        <form method="post">
+            <p>
+                Выбранный самолет для удаления: @ViewBag.currentAirplane.Model
+                <input type="text" hidden name="currentId" value="@ViewBag.currentAirplane.Id" />
+            </p>
+            <table class="table table-bordered table-hover">
                 <tr>
-                    @Html.HiddenFor(model => flight.Id)
-                    <td>@flight.DateTimeFlight</td>
-                    <td>@flight.DeparturePoint</td>
-                    <td>@flight.Destination</td>
-                    <td>@flight.TimeInFlight</td>
-                    <td>
-                        @Html.DropDownList("AirplaneId", new SelectList(ViewBag.airplaneList, "Id", "Model", ViewBag.currentAirplane.Id))
-                    </td>
+                    <th>Дата и время полета</th>
+                    <th>Пункт вылета</th>
+                    <th>Пункт назначения</th>
+                    <th>Время полета</th>
+                    <th>Замена самолета</th>
                 </tr>
-            }
-        </table>
-        <input type="submit" value="Сохранить изменения" />
-    </form>
+                @foreach (var flight in Model)
+                {
+                    <tr>
+                        @Html.HiddenFor(model => flight.Id)
+                        <td>@flight.DateTimeFlight</td>
+                        <td>@flight.DeparturePoint</td>
+                        <td>@flight.Destination</td>
+                        <td>@flight.TimeInFlight</td>
+                        <td>
+                            @Html.DropDownList("AirplaneId", new SelectList(ViewBag.airplaneList, "Id", "Model", ViewBag.currentAirplane.Id))
+                        </td>
+                    </tr>
+                }
+            </table>
+            <input type="submit" value="Сохранить изменения" onclick="return confirm('Сохранить изменения и удалить?')" />
+        </form>
+    </div>
 </div>
