--- a/WebAirport/Views/Flight/Delete.cshtml
+++ b/WebAirport/Views/Flight/Delete.cshtml
@@ -9,34 +9,34 @@
 
 <h2>Список связанных билетов с выбранным рейсом</h2>
 
-<div>
-    <form method="post">
-        <p>
-            Выбранный рейс на удаление: @ViewBag.currentFlight.DeparturePoint - @ViewBag.currentFlight.Destination
-            <input type="text" hidden value="@ViewBag.currentFlight.Id" name="currentId" />
-        </p>
-        <table>
-            <tr>
-                <td>Фамилия Имя</td>
-                <td>Отчество пассажира</td>
-                <td>Место</td>
-                <td>Цена</td>
-                <td>Новый рейс</td>
-            </tr>
-            @foreach (var ticket in Model)
-            {
+<div class="row">
+    <div class="col-md-6">
+        <form method="post">
+            <p>
+                Выбранный рейс на удаление: @ViewBag.currentFlight.DeparturePoint - @ViewBag.currentFlight.Destination
+                <input type="text" hidden value="@ViewBag.currentFlight.Id" name="currentId" />
+            </p>
+            <table class="table table-bordered table-hover">
                 <tr>
-                    @Html.HiddenFor(model => ticket.Id, new { Name = "Id" })
-                    <td>@ticket.FirstNamePassenger</td>
-                    <td>@ticket.LastNamePassenger</td>
-                    <td>@ticket.Seat</td>
-                    <td>@ticket.Price</td>
-                    <td>
-                        @Html.DropDownList("FlightId", new SelectList(ViewBag.Flights, "Id", "Description", ViewBag.currentFlight.Id))
-                    </td>
+                    <th>Фамилия Имя Отчество</th>
+                    <th>Место</th>
+                    <th>Цена</th>
+                    <th>Новый рейс</th>
                 </tr>
-            }
-        </table>
-        <input type="submit" value="Сохранить изменения" />
-    </form>
+                @foreach (var ticket in Model)
+                {
+                    <tr>
+                        @Html.HiddenFor(model => ticket.Id, new { Name = "Id" })
+                        <td>@ticket.FIOPassenger</td>
+                        <td>@ticket.Seat</td>
+                        <td>@ticket.Price</td>
+                        <td>
+                            @Html.DropDownList("FlightId", new SelectList(ViewBag.Flights, "Id", "Description", ViewBag.currentFlight.Id))
+                        </td>
+                    </tr>
+                }
+            </table>
+            <input type="submit" value="Сохранить изменения" onclick="return confirm('Сохранить изменения и удалить?')" />
+        </form>
+    </div>
 </div>
