--- a/WebAirport/Views/Position/Create.cshtml
+++ b/WebAirport/Views/Position/Create.cshtml
@@ -7,55 +7,55 @@
     @Html.ActionLink("Список должностей", "Index")
 </div>
 
-@Html.ValidationSummary(true)
+
 
 <h2>Данные для добавления новой должности</h2>
-<form method="post">
-    <table>
-        <tr>
-            <td>
-                Название должности
-            </td>
-            <td>
-                @Html.EditorFor(model => model.JobTitle)
-                @Html.ValidationMessageFor(model => model.JobTitle)
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Оклад
-            </td>
-            <td>
-                @Html.EditorFor(model => model.Salary)
-                @Html.ValidationMessageFor(model =>model.Salary)
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Обязанности
-            </td>
-            <td>
-                @Html.EditorFor(model => model.Responsibilities)
-                @Html.ValidationMessageFor(model => model.Responsibilities)
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Требования
-            </td>
-            <td>
-                @Html.EditorFor(model => model.Requirements)
-                @Html.ValidationMessageFor(model => model.Requirements)
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="submit" value="Добавить" />
-            </td>
-        </tr>
-    </table>
-</form>
-
+<div class="row">
+    <div class="col-md-8">
+        @Html.ValidationSummary(true)
+        <form method="post">
+            <table class="table">
+                <tr>
+                    <th>
+                        Название должности
+                    </th>
+                    <td>
+                        @Html.EditorFor(model => model.JobTitle)
+                        @Html.ValidationMessageFor(model => model.JobTitle)
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Оклад
+                    </th>
+                    <td>
+                        @Html.EditorFor(model => model.Salary)
+                        @Html.ValidationMessageFor(model => model.Salary)
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Обязанности
+                    </th>
+                    <td>
+                        @Html.EditorFor(model => model.Responsibilities)
+                        @Html.ValidationMessageFor(model => model.Responsibilities)
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Требования
+                    </th>
+                    <td>
+                        @Html.EditorFor(model => model.Requirements)
+                        @Html.ValidationMessageFor(model => model.Requirements)
+                    </td>
+                </tr>
+            </table>
+            <input type="submit" value="Добавить" />
+        </form>
+    </div>
+</div>
 
 @section Scripts{
     @Scripts.Render("~/bundles/jqueryval")
