--- a/WebAirport/Views/Ticket/Create.cshtml
+++ b/WebAirport/Views/Ticket/Create.cshtml
@@ -7,65 +7,59 @@
 </div>
 <h2>Добавить новый билет</h2>
 
-@Html.ValidationSummary(true)
-<div>
-    <form method="post">
-        <table>
-            <tr>
-                <td>Фамилия и Имя пассажира</td>
-                <td>
-                    @Html.EditorFor(model => model.FirstNamePassenger)
-                    @Html.ValidationMessageFor(model => model.FirstNamePassenger)
-                </td>
-            </tr>
-            <tr>
-                <td>Отчество пассажира</td>
-                <td>
-                    @Html.EditorFor(model => model.LastNamePassenger)
-                    @Html.ValidationMessageFor(model => model.LastNamePassenger)
-                </td>
-            </tr>
-            <tr>
-                <td>Паспортные данные пассажира</td>
-                <td>
-                    @Html.EditorFor(model => model.Passport)
-                    @Html.ValidationMessageFor(model => model.Passport)
-                </td>
-            </tr>
-            <tr>
-                <td>Должность пассажира</td>
-                <td>
-                    @Html.EditorFor(model => model.PositionPassenger)
-                    @Html.ValidationMessageFor(model => model.PositionPassenger)
-                </td>
-            </tr>
-            <tr>
-                <td>Место в самолете</td>
-                <td>
-                    @Html.EditorFor(model => model.Seat)
-                    @Html.ValidationMessageFor(model => model.Seat)
-                </td>
-            </tr>
-            <tr>
-                <td>Стоимость перелета</td>
-                <td>
-                    @Html.EditorFor(model => model.Price)
-                    @Html.ValidationMessageFor(model => model.Price)
-                </td>
-            </tr>
-            <tr>
-                <td>Выбранный рейс</td>
-                <td>
-                    @Html.DropDownListFor(model => model.FlightId, ViewBag.Flights as SelectList)
-                    @Html.ValidationMessageFor(model => model.FlightId)
-                </td>
-            </tr>
-        </table>
-        <input type="submit" value="Добавить билет" />
-    </form>
+<div class="row">
+    @Html.ValidationSummary(true)
+    <div class="col-md-8">
+        <form method="post">
+            <table class="table">
+                <tr>
+                    <th>Фамилия Имя Отчество</th>
+                    <td>
+                        @Html.EditorFor(model => model.FIOPassenger)
+                        @Html.ValidationMessageFor(model => model.FIOPassenger)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Паспортные данные пассажира</th>
+                    <td>
+                        @Html.EditorFor(model => model.Passport)
+                        @Html.ValidationMessageFor(model => model.Passport)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Должность пассажира</th>
+                    <td>
+                        @Html.EditorFor(model => model.PositionPassenger)
+                        @Html.ValidationMessageFor(model => model.PositionPassenger)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Место в самолете</th>
+                    <td>
+                        @Html.EditorFor(model => model.Seat)
+                        @Html.ValidationMessageFor(model => model.Seat)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Стоимость перелета</th>
+                    <td>
+                        @Html.EditorFor(model => model.Price)
+                        @Html.ValidationMessageFor(model => model.Price)
+                    </td>
+                </tr>
+                <tr>
+                    <th>Выбранный рейс</th>
+                    <td>
+                        @Html.DropDownListFor(model => model.FlightId, ViewBag.Flights as SelectList)
+                        @Html.ValidationMessageFor(model => model.FlightId)
+                    </td>
+                </tr>
+            </table>
+            <input type="submit" value="Добавить билет" />
+        </form>
+    </div>
+    <div id="selectFlight"></div>
 </div>
-
-<div id="selectFlight"></div>
 
 @Scripts.Render("~/scripts/jquery-3.4.1.min.js")
 @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
